[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LudwigHealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/DeathScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/gameSprites/ludwigSprite/go_ludwig.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/GO.tres" type="Animation" id=5]
[ext_resource path="res://scenes/ui_Left_Container.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/cootsPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/tileSprites/deskImage.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/testSprites/TX Props.png" type="Texture" id=9]
[ext_resource path="res://resources/fonts/BigFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/scripts/Desk.gd" type="Script" id=11]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Ludwig.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/animations/talk.tres" type="Animation" id=14]
[ext_resource path="res://assets/animations/Hand_Slam.tres" type="Animation" id=15]
[ext_resource path="res://assets/animations/hand_forward.tres" type="Animation" id=16]
[ext_resource path="res://assets/animations/hand_forward_bottom.tres" type="Animation" id=17]
[ext_resource path="res://scenes/newLudwig.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/animations/hand_forward_top.tres" type="Animation" id=19]
[ext_resource path="res://scenes/hazards/FollowPlayer.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/hazards/Spawner.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/kitchenTransition.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/dersBattleOfCats.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/sprites/gameSprites/ludwigSprite/CageClosed.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/gameSprites/ludwigSprite/ChainLong.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/gameSprites/ludwigSprite/explosion.jpg" type="Texture" id=26]
[ext_resource path="res://assets/animations/cage_explode.tres" type="Animation" id=27]

[sub_resource type="Shader" id=11]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/pixelate

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result to godotshaders.com.
*/

shader_type canvas_item;

uniform int amount = 40;

void fragment()
{
	vec2 grid_uv = round(UV * float(amount)) / float(amount);
	
	vec4 text = texture(TEXTURE, grid_uv);
	
	COLOR = text;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/amount = 300

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bottomHalf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 13.3333 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=9]
0/name = "deskImage.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 512, 448, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "deskImage.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1120, 448, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 10 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=6]
0/name = "TX Props.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 224, 288, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1000, 500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 67, 217 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 55.5, 214.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 72.5, 219 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ders:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 752, 262 ) ]
}

[node name="MainScene1" type="Node2D"]
script = ExtResource( 11 )

[node name="DeskImage" type="Sprite" parent="."]
material = SubResource( 12 )
position = Vector2( 497, 408 )
scale = Vector2( 1.14101, 1.1704 )
texture = ExtResource( 8 )

[node name="Ludwig" parent="." instance=ExtResource( 13 )]
pause_mode = 2
visible = false
position = Vector2( 460, 124 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ludwig"]
anims/RESET = SubResource( 13 )
anims/talk = ExtResource( 14 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 9 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
format = 1
tile_data = PoolIntArray( 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 851961, 1, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 1, 0, 917497, 1, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 1, 0, 983033, 1, 0, 983034, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 1, 0, 1048569, 1, 0, 1048570, 0, 0, 1048571, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 1, 0, 1114105, 1, 0, 1114106, 0, 0, 1114107, 0, 0, 1114108, 0, 0, 1114109, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 1, 0, 1179641, 1, 0, 1179642, 0, 0, 1179643, 0, 0, 1179644, 0, 0, 1179645, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 1, 0, 1245177, 1, 0, 1245178, 0, 0, 1245179, 0, 0, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 1, 0, 1310713, 1, 0, 1310714, 0, 0, 1310715, 0, 0, 1310716, 0, 0, 1310717, 0, 0, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 1, 0, 1376249, 1, 0, 1376250, 0, 0, 1376251, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 1, 0, 1441785, 1, 0, 1441786, 0, 0, 1441787, 0, 0, 1441788, 0, 0, 1441789, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 1, 0, 1507321, 1, 0, 1507322, 0, 0, 1507323, 0, 0, 1507324, 0, 0, 1507325, 0, 0, 1507326, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 1, 0, 1572857, 1, 0, 1572858, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1572861, 0, 0, 1572862, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 1, 0, 1638393, 1, 0, 1638394, 1, 0, 1638395, 1, 0, 1638396, 1, 0, 1638397, 1, 0, 1638398, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 496, 384 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 166.0
margin_top = 584.0
margin_right = 869.0
margin_bottom = 664.0
custom_fonts/font = ExtResource( 10 )
text = "Playable Area Down Here"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -83.0
margin_top = 2.0
margin_right = 1141.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 10 )
text = "Boss Area (or Just Background) is up here"

[node name="PauseLayer" parent="." instance=ExtResource( 1 )]

[node name="Pause" parent="PauseLayer" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hazardMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = SubResource( 6 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 393217, 0, 0, 393229, 0, 0, 720903, 0, 0 )

[node name="heartLayer" type="CanvasLayer" parent="."]

[node name="HeartContainer" parent="heartLayer" instance=ExtResource( 6 )]

[node name="deathScene" type="CanvasLayer" parent="."]
layer = 3

[node name="DeathScene" parent="deathScene" instance=ExtResource( 3 )]

[node name="LudHealthBar" type="CanvasLayer" parent="."]

[node name="LudwigHealthBar" parent="LudHealthBar" instance=ExtResource( 2 )]
margin_left = -1951.0
margin_top = 2.0
margin_right = -31.0
margin_bottom = 1082.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GO = ExtResource( 5 )
anims/Hand_Slam = ExtResource( 15 )
anims/RESET = SubResource( 14 )
anims/hand_forward = ExtResource( 16 )
anims/hand_forward_bottom = ExtResource( 17 )
anims/hand_forward_top = ExtResource( 19 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( -24, 508 )

[node name="Hand" parent="." instance=ExtResource( 12 )]
position = Vector2( 1000, 500 )

[node name="changeBack" type="Timer" parent="."]
one_shot = true

[node name="state_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="newLudwig" parent="." instance=ExtResource( 18 )]
position = Vector2( 470, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="frontArea" type="Area2D" parent="newLudwig"]
position = Vector2( 42, 874 )
scale = Vector2( 2, 2 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="newLudwig/frontArea"]
position = Vector2( 1, 0 )
shape = SubResource( 15 )

[node name="leftArea" type="Area2D" parent="newLudwig"]
position = Vector2( -692, 788 )
scale = Vector2( 2, 2 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="newLudwig/leftArea"]
position = Vector2( 5.5, 44.5 )
shape = SubResource( 16 )

[node name="rightArea" type="Area2D" parent="newLudwig"]
position = Vector2( 766, 880 )
scale = Vector2( 2, 2 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="newLudwig/rightArea"]
shape = SubResource( 17 )

[node name="spawners" type="Node2D" parent="."]

[node name="Spawner" parent="spawners" instance=ExtResource( 21 )]
position = Vector2( 102, 400 )
spawnIN = ExtResource( 20 )

[node name="Spawner2" parent="spawners" instance=ExtResource( 21 )]
position = Vector2( 851, 413 )
spawnIN = ExtResource( 20 )

[node name="Spawner3" parent="spawners" instance=ExtResource( 21 )]
position = Vector2( 487, 742 )
spawnIN = ExtResource( 20 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -5.0
margin_right = 2082.0
margin_bottom = 1615.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="kitchenTransition" type="CanvasLayer" parent="."]

[node name="kitchenTransition" parent="kitchenTransition" instance=ExtResource( 22 )]

[node name="ders" parent="." instance=ExtResource( 23 )]
position = Vector2( 752, 262 )

[node name="Cage" type="Node2D" parent="."]
position = Vector2( 753, 129 )
scale = Vector2( 0.15, 0.15 )
z_index = 2

[node name="chain" type="Sprite" parent="Cage"]
texture = ExtResource( 25 )

[node name="chain2" type="Sprite" parent="Cage"]
position = Vector2( 6.6665, -466.667 )
texture = ExtResource( 25 )

[node name="chain3" type="Sprite" parent="Cage"]
position = Vector2( 13.333, -933.333 )
texture = ExtResource( 25 )

[node name="box" type="Sprite" parent="Cage"]
position = Vector2( -9, 730 )
texture = ExtResource( 24 )

[node name="Explosion" type="Sprite" parent="Cage"]
visible = false
position = Vector2( -6.66699, 780 )
scale = Vector2( 2.51852, 2.59259 )
z_index = 2
texture = ExtResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cage"]
anims/RESET = SubResource( 18 )
anims/cage_explode = ExtResource( 27 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="changeBack" to="." method="_on_changeBack_timeout"]
[connection signal="timeout" from="state_timer" to="." method="_on_state_timer_timeout"]
[connection signal="body_entered" from="newLudwig/frontArea" to="." method="_on_frontArea_body_entered"]
[connection signal="body_entered" from="newLudwig/leftArea" to="." method="_on_leftArea_body_entered"]
[connection signal="body_entered" from="newLudwig/rightArea" to="." method="_on_rightArea_body_entered"]

[editable path="Ludwig"]
[editable path="PauseLayer"]
